<resources>
    <string name="app_name">TMDB App</string>
    <string name="error_not_implemented">Не удалось обработать событие</string>

    <!-- Интерфейс -->
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="welcome_subtitle">Укажите логин и пароль, которые вы использовали для входа</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="main_screen_stub">Главный экран</string>
    <string name="logout_button_text">Выйти</string>
    <string name="favorite">Избранное</string>
    <string name="films">Фильмы</string>
    <string name="profile">Профиль</string>
    <string name="glide_error_message">Не удалось загрузить изображение.\nПроверьте подключение к интернету.</string>

    <!-- Логин -->
    <string name="valid_login">mvgreen_test</string>
    <string name="valid_password">Fe6txkBX6kBWWN5</string>

    <!-- Ошибки -->
    <string name="error_unknown">Что-то пошло не так</string>
    <string name="error_server">Ошибка на стороне сервера</string>
    <string name="error_bad_connection">Плохое соединение с интернетом</string>
    <string name="error_no_connection">Нет соединения с интернетом</string>
    <string name="error_no_response">Не удалось получить ответ от сервера</string>
    <string name="error_bad_credentials">Неверный логин или пароль</string>
    <string name="error_loading_items">Не удалось загрузить данные</string>
    <string name="error_bad_request">Действие не выполнено</string>

    <!-- Шаблоны -->
    <string name="title_template">%1$s (%2$s)</string>
    <string name="error_download_config">Произошла ошибка при загрузке конфигурации сервиса, проверьте соединение</string>
    <string name="minutes">%1$s минут</string>
    <string name="message_loading_config">Секундочку, загружаем файлы конфигурации...</string>
    <string name="retry">Повторить попытку</string>
    <string name="stub_description">Семь лет назад доктор Дулиттл, прославленный врач-ветеринар, живущий в викторианской Англии, потерял свою жену. Теперь он ведет затворнический образ жизни, скрывшись за высокими стенами своего поместья. Экзотические животные из его коллекции — его единственная компания. Но когда неизвестная болезнь становится угрозой для жизни юной королевы, доктору Дулиттлу приходится покинуть свое убежище и отправиться в невероятное путешествие к мифическому острову. В поисках лекарства для королевы он вступит в схватку с беспощадными врагами, познакомится с диковинными существами и будет вынужден проявить недюжинное мужество и смекалку.Семь лет назад доктор Дулиттл, прославленный врач-ветеринар, живущий в викторианской Англии, потерял свою жену. Теперь он ведет затворнический образ жизни, скрывшись за высокими стенами своего поместья. Экзотические животные из его коллекции — его единственная компания. Но когда неизвестная болезнь становится угрозой для жизни юной королевы, доктору Дулиттлу приходится покинуть свое убежище и отправиться в невероятное путешествие к мифическому острову. В поисках лекарства для королевы он вступит в схватку с беспощадными врагами, познакомится с диковинными существами и будет вынужден проявить недюжинное мужество и смекалку.</string>
    <string name="check_connection">Проверьте подключение к интернету</string>
    <string name="no_description">Нет описания</string>
    <string name="time">Время</string>
    <string name="min">мин</string>
    <string name="rating">Рейтинг фильма</string>
    <string name="empty_response">По вашему запросу ничего не найдено :(</string>

</resources>
