<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launch_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_circular"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/loading_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/loading_message"
            style="@style/h3_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_loading_config"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_circular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launch_error"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/error_message"
            style="@style/h3_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_download_config"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/button_retry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="16dp"
            style="@style/orange_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
