<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="64dp"
            android:layout_height="96dp"
            android:layout_marginTop="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_back" />

        <TextView
            android:id="@+id/title"
            style="@style/h3_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:lines="2"
            android:maxLines="2"
            app:layout_constraintLeft_toRightOf="@id/poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_back" />

        <TextView
            android:id="@+id/title_original"
            style="@style/caption2_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/genre"
            style="@style/caption2_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_original" />


        <TextView
            android:id="@+id/textview_time"
            style="@style/caption2_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster" />

        <TextView
            android:id="@+id/length"
            style="@style/h3_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_time" />

        <TextView
            android:id="@+id/textview_min"
            style="@style/sfpro_light_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/min"
            app:layout_constraintBottom_toBottomOf="@id/length"
            app:layout_constraintLeft_toRightOf="@id/length" />


        <TextView
            android:id="@+id/textview_rating"
            style="@style/caption2_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/rating"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/poster" />

        <TextView
            android:id="@+id/score"
            style="@style/h3_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintLeft_toLeftOf="@id/textview_rating"
            app:layout_constraintTop_toBottomOf="@id/textview_time" />

        <TextView
            android:id="@+id/vote_count"
            style="@style/sfpro_gray_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="@id/score"
            app:layout_constraintLeft_toRightOf="@id/score" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/dark_blue"
            app:layout_constraintTop_toBottomOf="@id/length" />

        <TextView
            android:id="@+id/description"
            style="@style/sfpro_light_big"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="21dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_screen"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/error_message"
        style="@style/h3_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_connection"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        style="@style/orange_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>